/*
 * $Id: Changelog,v 1.7 2003/04/12 23:47:02 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-04-15 00:35 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  + src/filesel.prg
  + src/xwt_gtk/xwt_gtk_fileselct.c
    + Started developement of file selection widget.
      ( created by Luiz Culik )

  * include/xwt.ch
  * src/xwt_api.c
  * src/xwt_gtk/xwt_gtk.c
  * src/xwt_gtk/xwt_gtk.h
    + Added support for file selection widget

  * test/xwt_test.prg
    + Added test for file selection widget.


2003-04-13 01:40 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  ! src/event.prg
    ! Wrong Empty() check for the parameter. ::aParam was always
      created empty. Fixed

  * src/container.prg
  + src/radiobutton.prg
    + Added radiobutton object. A container is used to store a radio
      button group: each group must belong to a container, and vice-versa.
      So, the container class is now aware if a raidio group is inside
      it with the member oRadioGroup. Also, all widgets are notified when
      they are added to a container with the XWT_E_ADDEDTO event; this is
      risen BEFORE the widget is really added, so it cannot propagated to
      the new owner. A similar XWT_E_REMOVEFROM event is risen after the
      widget has been removed

  + src/viewport.prg
    + Added scrollable viewport: it can hold just a container or a large
      widget, wich is scrolled automatically by the viewport (if needed);
      scrollbars are automatically added on need.

  * src/widget.prg
    + Added support for preventing ev ent propagation to parents using
      ::bEventsToParent boolean member. If false, events are not
      propagated. By default, this member is true, but it can be changed
      depending on widgets and situations.

  * include/xwt.ch
  * src/xwt_api.c